--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "file-loader": "^3.0.1",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.4",
     "plop": "^2.1.0",
     "postcss": "^7.0.5",
