added-api-call-logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,11 @@
     "pretty": true,
     "outDir": "build",
     "lib": ["es6", "es7", "dom"],
-    "baseUrl": "./src",
-    "paths": {
-      "app/*": ["./app/*"]
-    }
+    "baseUrl": "./src/",
+    "paths": {},
+    "plugins": [{
+      "transform": "transformer-module"
+    }, ]
   },
   "exclude": ["dist", "build", "node_modules", "internals"]
 }
