--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "tslint -c tslint.json --fix './src/app/**.tsx' -t verbose"
   },
   "engines": {
-    "node": "11.x"
+    "node": ">= 11.x"
   },
   "pre-commit": {
     "colors": true,
@@ -68,6 +68,7 @@
     "tslint-config-prettier": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
+    "ttypescript": "^1.5.6",
     "typescript": "^3.1.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
